--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
+#Detalhe: comentar sempre sem acentos no .properties, para não dar erro
+
 spring.application.name=web-services-spring-boot
+
+#Coloca o perfil ativo da aplicacao como o perfil de teste, ideal enquanto esta desenvolvendo
+#Ao definir spring.profiles.active=test, estou dizendo ao Spring Boot para ativar o perfil chamado test. 
+#Isso significa que o Spring Boot carregara as configurações especificas do perfil test, 
+#que podem estar em arquivos de propriedades separados (como application-test.properties) ou no caso, na classe TestConfig
+#e vantajoso pois, posso criar varios perfis e mudar somente aqui para ativar configuracoes diferentes, 
+#como por exemplo, a classe TestConfig so executa no perfil de teste, 
+#mas eu poderia ter cada perifl com uma url de banco de dados diferente, por exemplo
 spring.profiles.active=test
+
+#Ele permite que o Jackson na hora de serializar o Json falar pro JPA que por exemplo,
+#ao buscar um cliente, ele tambem vai precisar dos pedidos do usuario, assim, 
+#ele chama o JPA pra buscar os pedidos desse usuario tambem.
 spring.jpa.open-in-view=true
